# QSwitch

./: .gitignore  Cargo.toml
QFramework/qgen/: Cargo.toml
QFramework/qgen/examples/: flatterrain.rs  test.rs
QFramework/qgen/examples/resources/flatterrain/: vert.hlsl
QFramework/qgen/src/: flatterrain.rs  lib.rs
QFramework/qprimitives/: Cargo.toml
QFramework/qprimitives/src/: lib.rs
QFramework/qserver/: Cargo.toml
QFramework/qserver/examples/: connect_two_servers.rs  connect_two_terminals.rs  server_process.rs  terminal_process.rs
QFramework/qserver/src/: bytable.rs  foreign_server.rs  lib.rs  local_server.rs  message_exchange.rs  station.rs
QFramework/qserver/src/cluster_terminal/: mod.rs
QFramework/qserver/src/comm_group/: mod.rs
QFramework/qserver/src/comm_port/: mod.rs
QFramework/qserver/src/live_state/: mod.rs
QFramework/qserver/src/terminal_connection/: message_exchange.rs  mod.rs
QFramework/qserver/src/terminal_map/: mod.rs
QFramework/qvk/: Cargo.toml
QFramework/qvk/examples/: graphics-pipeline.rs  increment-shader.rs  load-image.rs
QFramework/qvk/examples/gp-drones/: main.rs
QFramework/qvk/examples/resources/gp-drone/: update.hlsl  update.spv  vert.hlsl  vert.spv
QFramework/qvk/examples/resources/shaders/: gp-vertex.hlsl  gp-vertex.vert  increment-set.hlsl
QFramework/qvk/examples/src/shaders/: instance_movement.comp  shadow_miss.rmiss  standard_miss.rmiss  standard_ray_gen.rgen
QFramework/qvk/src/: camera.rs  commandbuffer.rs  commandpool.rs  device.rs  image.rs  imageview.rs  instance.rs  lib.rs  ref.rs  shapes.rs  swapchain.rs
QFramework/qvk/src/allocator/: bufferallocator.rs  buffersegment.rs  memallocator.rs  mod.rs  partitionsystem.rs
QFramework/qvk/src/command/: commandbuffer.rs  commandpool.rs  commandset.rs  executor.rs  mod.rs
QFramework/qvk/src/descriptor/: descriptorlayout.rs  mod.rs  pool.rs  set.rs  writeholder.rs
QFramework/qvk/src/image/: image.rs  imageresource.rs  imageview.rs  mod.rs
QFramework/qvk/src/init/: device.rs  instance.rs  mod.rs  swapchain.rs
QFramework/qvk/src/memory/: buffer.rs  bufferarea.rs  bufferpartition.rs  memory.rs  mod.rs  partitionsystem.rs
QFramework/qvk/src/memory/allocators/: imageallocator.rs  memallocator.rs  partitionsystem.rs
QFramework/qvk/src/memory/buffer/: buffer.rs  bufferpartition.rs  buffersegment.rs  mod.rs
QFramework/qvk/src/memory/image/: image.rs  imageresource.rs
QFramework/qvk/src/pipelines/: compute.rs  layout.rs  mod.rs
QFramework/qvk/src/pipelines/graphics/: graphics.rs  mod.rs  renderpass.rs
QFramework/qvk/src/queue/: mod.rs  queue.rs  submit.rs
QFramework/qvk/src/shader/: mod.rs  shader.rs  spirvdata.rs
QFramework/qvk/src/sync/: fence.rs  mod.rs  semaphore.rs  timelinesemaphore.rs
QFramework/qvk/tests/: tests_memory.rs  tests_pipeline.rs
qcom/: Cargo.toml
qcom/examples/: test.rs
qcom/src/: lib.rs  log.rs
qcom/src/bus/: mod.rs
qforce/: Cargo.toml  cargo.toml
qforce/src/: lib.rs
qgen/examples/: flatterrain.rs
qgen/examples/resources/flatterrain/: vert.hlsl
qgen/src/: flatterrain.rs
qmanager/: Cargo.toml
qprimitives/src/: lib.rs
qserver/: Cargo.toml
qserver/examples/: connect_two_servers.rs
qserver/src/: lib.rs  lib_copy.rs  local_server.rs  main.rs  message_exchange.rs
qserver/src/cluster_terminal/: mod.rs
qserver/src/lib/: lib.rs
qserver/src/terminal_map/: mod.rs
qsim/: Cargo.toml
qsim/lib/: lib.rs
qsim/src/: main.rs
qswitch/: Cargo.toml  test_compute.comp
qswitch/src/: main.rs
quniverse/: Cargo.toml
quniverse/lib/: lib.rs
qvk/: Cargo.toml
qvk/examples/: bus.rs  graphics-pipeline.rs
qvk/examples/gp-drones/: main.rs
qvk/examples/resources/gp-drone/: frag.hlsl  frag.spv
qvk/examples/resources/shaders/: gp-fragment.frag  gp-vertex.hlsl  gp-vertex.vert  increment-set.hlsl
qvk/src/: bus.rs  lib.rs  shapes.rs
qvk/src/command/: commandbuffer.rs  executor.rs
qvk/src/descriptor/: descriptorlayout.rs  mod.rs
qvk/src/init/: device.rs  instance.rs  swapchain.rs
qvk/src/init_bus/: device.rs  instance.rs  mod.rs
qvk/src/memory/allocators/: bufferallocator.rs  mod.rs
qvk/src/memory/buffer/: buffersegment.rs
qvk/src/memory/image/: imageview.rs  mod.rs
qvk/src/pipelines/: compute.rs  mod.rs
qvk/src/pipelines/graphics/: graphics.rs
qvk/src/queue/: queue.rs
qvk/src/shader/: shader.rs
qvk/src/sync/: fence.rs  mod.rs  semaphore.rs  timelinesemaphore.rs
windowed_tests/: Cargo.toml
windowed_tests/src/shaders/: shadow_miss.rmiss  standard_closest_hit.rchit  standard_miss.rmiss  standard_ray_gen.rgen
