[package]
name = "qforce"
version = "0.0.0"
edition = "2021"

[dependencies]
qvk = {path = "../qvk"}
ash = {version = "0.37.0", features = ["linked", "debug"]}
flume = "0.10.14"
winit = "0.26.0"
log = {version = "0.4.17", features=["release_max_level_off"]}
pretty_env_logger = "0.4.0"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
bevy_math = "0.8.*"
