[package]
name = "qserver"
version = "0.1.0"
edition = "2021"
[lib]
name = "qserver"
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.21.2", features = ["full"]}
tokio-stream = "0.1.11"
flume = "0.10.14"
bytes = "1.2.1"
async-trait = "0.1.57"
log = {version = "0.4.17", features=["release_max_level_off"]}
zerocopy = "0.6.*"
rand = "0.8.5"
once_cell = "1.16.0"
