[package]
name = "qsim"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1.21.2", features = ["full"]}
flume = "0.10.14"
bytes = "1.2.1"
async-trait = "0.1.57"
log = {version = "0.4.17", features=["release_max_level_off"]}
rayon = "1.5.3"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
glam = {version = "0.22.0", features = ["scalar-math", "rand"]}
plotters = "0.3.4"