[package]
name = "qswitch"
version = "0.0.0"
edition = "2021"
[lib]
name = "qswitch"
path = "src/lib/lib.rs"
[[bin]]
name = "qswitch"
path = "src/main.rs"
[dependencies]
tokio = {version = "1.21.2", features = ["full"]}
qserver = {path = "../qserver"}
# quniverse = {path = "../quniverse"}
# qforce = {path = "../qforce"}
winit = "0.26.*"
clap = {version = "4.0.18", features = ["derive"]}
local-ip-address="0.4.9"