[package]
name = "qswitch"
version = "0.0.0"
edition = "2021"
[lib]
name = "qswitch"
path = "src/lib/lib.rs"
[[bin]]
name = "qswitch"
path = "src/main.rs"
[dependencies]
tokio = {version = "1.21.2", features = ["full"]}
qserver = {path = "../QFramework/qserver"}
clap = {version = "4.0.18", features = ["derive"]}
local-ip-address="0.4.9"
rand = "0.8.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
incremental = false