[package]
name = "quniverse"
version = "0.1.0"
edition = "2021"
[lib]
name = "qswitch"
path = "src/lib/lib.rs"
[[bin]]
name = "qswitch"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.21.2", features = ["full"]}
flume = "0.10.14"
bytes = "1.2.1"
async-trait = "0.1.57"
log = {version = "0.4.17", features=["release_max_level_off"]}
qserver = {path = "../qserver"}