[package]
name = "qgen"
version = "0.0.0"
edition = "2021"

[dependencies]
log = {version = "0.4.17", features=["release_max_level_off"]}
pretty_env_logger = "0.4.0"
rand = "0.8.5"
glam = {version = "0.22.0", features = ["scalar-math"]}
ash = {version = "0.37.1+1.3.235", features = ["linked", "debug"]}
noise = "0.8.2"
qprimitives = {path= "../qprimitives"}


[dev-dependencies]
ash-window = "0.12.0"
winit = "0.27.5"
raw-window-handle = "0.5.0"
shaderc = "0.8.1"
qvk = {path = "../qvk"}
