[package]
name = "qvk"
version = "0.0.0"
edition = "2021"

[dependencies]
ash = {version = "0.37.0", features = ["linked", "debug"]}
flume = "0.10.14"
winit = "0.27.5"
log = {version = "0.4.17", features=["release_max_level_off"]}
ash-window = "0.12.0"
shaderc = "0.8.0"
cgmath = "0.18.0"
pretty_env_logger = "0.4.0"
raw-window-handle = "0.5.0"
tokio = {version = "1.23.0", features = ["full"]}
async-trait = "0.1.59"