[package]
name = "qvk"
version = "0.0.0"
edition = "2021"

[dependencies]
ash = {version = "0.37.1+1.3.235", features = ["linked", "debug"]}
winit = "0.27.5"
log = {version = "0.4.17", features=["release_max_level_off"]}
ash-window = "0.12.0"
pretty_env_logger = "0.4.0"
raw-window-handle = "0.5.0"
image = "0.24.5"
shaderc = "0.8.1"


[profile.release]
lto = true
strip = true
